<resources>
    <string name="app_name">Weather</string>

    <string name="forecast_here">Forecast for this location</string>
    <string name="my_locations">My Locations</string>
    <string name="show_on_map">Show on Map</string>


    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="wind_speed_units">m/s</string>
    <string name="humidity">Humidity:</string>
    <string name="chance">chance of</string>
    <string name="weather_for_next">Weather for next</string>
    <string name="days">days</string>

    <string name="save_location">Save\nLocation</string>
    <string name="display_number_days">Days</string>
    <string name="show_daily">Show\nDaily</string>
    <string name="show_hourly">Show\nHourly</string>

    <string name="enter_location">Enter Location:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="dismiss">Dismiss</string>
    <string name="save">Save</string>

    <string name="email">Email</string>

    <string name="display">Display on map</string>

    <string name="are_you_sure">Are you sure you want to delete this location?</string>

    <string name="map">Map</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="add_to_my_locations">Add to my locations</string>
    <string name="search">Search:</string>


    <string name="error">There was an error</string>
    <string name="retry">Retry</string>
</resources>
