<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="16sp"
            android:text="@string/search"
            android:textStyle="normal|bold"/>


        <EditText
            android:id="@+id/txt_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


        <ImageButton
            android:theme="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search_white_24dp"
            android:id="@+id/btn_search"
            />
    </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <Button
                android:id="@+id/btn_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terrain"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite"
                android:layout_weight="1" />
        </LinearLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/map"
                  android:layout_width="match_parent"
                  android:layout_height="fill_parent"
                  android:name="com.google.android.gms.maps.MapFragment"/>

</LinearLayout>
