<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >
    <LinearLayout
        android:id="@+id/episode_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

    <Button
        android:id="@+id/btn_forecast_here"
        android:theme="@style/AppTheme.Button"
        android:padding="@dimen/padding_large"
        android:layout_margin="@dimen/padding_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorTextLight"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/forecast_here"
        />

    <Button
        android:id="@+id/btn_my_locations"
        android:theme="@style/AppTheme.Button"
        android:padding="@dimen/padding_large"
        android:layout_margin="@dimen/padding_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorTextLight"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/my_locations"
        />

    <Button
        android:id="@+id/btn_show_on_map"
        android:theme="@style/AppTheme.Button"
        android:padding="@dimen/padding_large"
        android:layout_margin="@dimen/padding_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorTextLight"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/show_on_map"
        />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>