<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/layout_map"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorTextLight"
                android:layout_gravity="center_vertical"
                android:text="@string/search"
                android:textStyle="normal|bold"/>


            <EditText
                android:id="@+id/txt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/text_size_small"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>


            <ImageButton
                android:theme="@style/AppTheme.Button"
                android:layout_width="@dimen/btn_square_side"
                android:layout_height="@dimen/btn_square_side"
                android:layout_margin="@dimen/btn_square_margin"
                app:srcCompat="@drawable/ic_search_white_24dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_search"
                />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/btn_map"
                android:theme="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorTextLight"
                android:padding="@dimen/padding_medium"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_terrain"
                android:theme="@style/AppTheme.Button"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terrain"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorTextLight"
                android:padding="@dimen/padding_medium"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_satellite"
                android:theme="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorTextLight"
                android:padding="@dimen/padding_medium"
                android:layout_weight="1" />
        </LinearLayout>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/map"
                      android:layout_width="match_parent"
                      android:layout_height="fill_parent"
                      android:name="com.google.android.gms.maps.MapFragment"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:clickable="true"
                android:src="@drawable/ic_mic_white_24dp" />
        </FrameLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>